# public_data_ai_contest

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  swap_recommendations.csv
data/: menu_preproc.csv  학교별_식단유사도.csv
src/: index_main.html
src/config/: paths.py
src/model/: main_cluade.py  main_temp.py
src/preproc/: preproc_all.py  preproc_util.py
