[project]
name = "public-data-ai-contest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "setuptools>=82.0.1",
    "tqdm>=4.67.3",
]
